--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "outDir": "./build",
     "target": "es5",
     "typeRoots": [
-      "TsTypes/CustomTypes",
+      "tsTypes/CustomTypes",
       "node_modules/@types"
     ]
   }
