--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "allowJs": true,
     "outDir": "./build",
-    "target": "es5",
+    "target": "ES2015",
+    "moduleResolution": "node",
     "typeRoots": [
       "tsTypes/CustomTypes",
       "node_modules/@types"
